refactor(nodes): 优化节点计算逻辑和代码结构
- 简化PreviewBlocksNode中的高度计算方法，使用变量代替重复调用
- 调整SelectedBlockSequenceNode中列表操作方法，使用getFirst/getLast替代索引访问
- 将PreviewBlocksNode最小宽度从200调整为184
- 移除预览中的文本标签并调整间距
- 使用removeLast替代remove(size-1)操作提升性能